[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

thread_local = "1.1.4"
parking_lot = "0.12.1"
futures = "0.3.14"
tokio-stream = "0.1"
headers = "0.3"

actix-web = "4.2.1" # web 框架
serde = { version = "1.0", features = ["derive"] } #序列化库
serde_json = "1.0"

axum = {version="0.5.17", features = ["multipart","headers","ws"]} # web 框架
tower= { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.4", features = ["fs", "trace", "compression-br"] }
rand = "0.8.5"

salvo = { version = "*", features = ["cache", "session", "size-limiter","sse", "ws"] } # 国产 web 框架
anyhow = "1.0.66"
time = "0.3.17"

tracing= "0.1.37" # 日志库
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.tokio]
version = "1.22.0"
features = ["full"]

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]
